nohup.out
 * Detected change in '/home/gajang/src/market/market_repository.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/src/store/store_service.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/app.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/src/store/store_service.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/src/store/store_service.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/src/store/store_service.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/src/store/store_service.py', reloading
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 102-617-177
 * Detected change in '/home/gajang/src/store/store_service.py', reloading
 * Restarting with stat
Traceback (most recent call last):
  File "/home/gajang/app.py", line 168, in <module>
    import src.store.store_service as store_service
  File "/home/gajang/src/store/store_service.py", line 32
    def updatePermanentStore():
    ^
IndentationError: expected an indented block
